added styling to game show page, added functionaility for jquery via yarn, added deck module to allow splitting of deck

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -11,6 +11,7 @@
     </div>
   <% end %>
 
+<!--
   <div class="field">
     <%= form.label :session_id %>
     <%= form.text_field :session_id, id: :game_session_id %>
@@ -25,11 +26,14 @@
     <%= form.label :deck_2 %>
     <%= form.text_field :deck_2, id: :game_deck_2 %>
   </div>
+-->
 
   <div class="field">
-    <%= form.label :user_name %>
+    <%= form.label :user_name, 'Please enter a user name' %>
     <%= form.text_field :user_name, id: :game_user_name %>
   </div>
+
+  <!--
 
   <div class="field">
     <%= form.label :move %>
@@ -45,6 +49,8 @@
     <%= form.label :user_2_points %>
     <%= form.number_field :user_2_points, id: :game_user_2_points %>
   </div>
+
+-->
 
   <div class="actions">
     <%= form.submit %>
