--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,39 +1,37 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p> -->
 
-<p>
-  <strong>Session:</strong>
-  <%= @game.session_id %>
-</p>
+<div class="felt-background">
+  <div class="container">
+    <header>
+      <h1>The Game of War</h1>
 
-<p>
-  <strong>Deck 1:</strong>
-  <%= @game.deck_1 %>
-</p>
+      <div id="name-section-user">
+        <h3>User 1</h3>
+        <h3><%= @game.user_name %></h3>
+        <h3>Cards left:
+          <%= @game.user_1_cards_left %></h3>
+      </div>
 
-<p>
-  <strong>Deck 2:</strong>
-  <%= @game.deck_2 %>
-</p>
+      <div id="name-section-computer">
+        <h3>User 2</h3>
+        <h3>Computer</h3>
+        <h3>Cards left:
+          <%= @game.user_2_cards_left %></h3>
+      </div>
 
-<p>
-  <strong>User name:</strong>
-  <%= @game.user_name %>
-</p>
+    </header>
 
-<p>
-  <strong>Move:</strong>
-  <%= @game.move %>
-</p>
+    <section id="card-area">
+      <div class="card" id="card-1"></div>
+      <div class="card" id="card-2"></div>
+      <div class="card" id="card-3"></div>
+      <div class="card" id="card-4"></div>
+    </section>
 
-<p>
-  <strong>User 1 points:</strong>
-  <%= @game.user_1_points %>
-</p>
+    <%= link_to 'DEAL', '#', class: 'deal-button' %>
 
-<p>
-  <strong>User 2 points:</strong>
-  <%= @game.user_2_points %>
-</p>
+  </div>
 
-<%= link_to 'Edit', edit_game_path(@game) %> |
-<%= link_to 'Back', games_path %>
+  <!-- ./container -->
+</div>
+<!-- ./felt-background -->
