added redirection in the event somebody tries to alter the game url

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -19,6 +19,10 @@
           <%= @game.user_2_cards_left %></h3>
       </div>
 
+      <div id="notice-bar">
+        <p id="notice"><%= notice %></p>
+      </div>
+
     </header>
 
     <section id="card-area">
