--- a/app/assets/stylesheets/games.scss.erb
+++ b/app/assets/stylesheets/games.scss.erb
@@ -33,11 +33,21 @@
         margin-right: 150px;
       }
 
+      #notice-bar {
+        clear: both;
+        width: 100%;
+        height: 50px;
+
+        #notice {
+          text-align: center;
+          font-weight: bold;
+        }
+      }
+
     } // .header
 
     #card-area {
-      margin-top: 100px;
-      clear: both;
+      margin-top: 10px;
       width: 100%;
       text-align: center;
 
@@ -61,7 +71,7 @@
       color: black;
       text-decoration: none;
       text-align: center;
-      margin: 25px auto;
+      margin: 75px auto 0 auto;
       background-color: white;
       border: 2px solid black;
       padding: 8px;
