--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,10 @@
 
   <body>
     <%= yield %>
+
+    <% if controller.controller_name != 'games' %>
+      <p id="notice"><%= notice %></p>
+    <% end %>
+
   </body>
 </html>
