added logic to evaluating action for the games controller

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -32,7 +32,7 @@
       <div class="card" id="card-4"></div>
     </section>
 
-    <%= link_to 'DEAL', '#', class: 'deal-button' %>
+    <%= link_to 'DEAL', evaluate_path, class: 'deal-button' %>
 
   </div>
 
